manifests/monitoring/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
  namespace: monitoring
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`grafana.fedishark.eu`)
      kind: Rule
      middlewares:
        - name: security-headers
          namespace: traefik
        - name: no-compression
          namespace: traefik
        - name: fail2ban-grafana
          namespace: monitoring
      services:
        - name: kube-prometheus-stack-grafana
          port: 80
  tls:
    certResolver: letsencrypt
